--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@astrojs/preact": "^2.2.1",
+    "@astrojs/prefetch": "^0.2.3",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/solid-js": "^2.2.0",
