--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "astro-particles": "^2.10.0",
     "clsx": "^1.2.1",
     "github-slugger": "^2.0.0",
+    "medium-zoom": "^1.0.8",
     "preact": "^10.15.1",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
