--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.19.7",
     "@astrojs/preact": "^2.2.1",
-    "@astrojs/prefetch": "^0.2.3",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/solid-js": "^2.2.0",
